Nội dung 3 Ẩn thanh tiêu đề và thanh trạng thái trên android

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,9 @@
     <style name="Base.Theme.Baitap01" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="android:windowFullscreen">true</item>
     </style>
+
 
     <style name="Theme.Baitap01" parent="Base.Theme.Baitap01" />
 </resources>
